--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "homepage": "https://github.com/Uenderss/projeto13-mywallet-back#readme",
   "devDependencies": {
     "nodemon": "^2.0.18"
+  },
+  "dependencies": {
+    "chalk": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongodb": "^4.7.0"
   }
 }
