criar arquivo de conexao mongo

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "MyWallet back-end",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon ./src/index.js",
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
