--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
   "name": "projeto13-mywallet-back",
-  "version": "1.0.0",
   "type": "module",
-  "description": "MyWallet back-end",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Uenderss/projeto13-mywallet-back.git"
-  },
+  "keywords": [],
   "author": "Bartolomeu",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Uenderss/projeto13-mywallet-back/issues"
-  },
-  "homepage": "https://github.com/Uenderss/projeto13-mywallet-back#readme",
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.16"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "chalk": "^5.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dayjs": "^1.11.2",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
-    "mongodb": "^4.7.0",
+    "mongodb": "^4.5.0",
     "uuid": "^8.3.2"
   }
 }
